--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express-session": "^1.17.3",
     "jest": "^29.7.0",
     "mysql": "^2.18.1",
-    "nodemon": "^3.0.1"
+    "mysql2": "^3.6.3",
+    "nodemon": "^3.0.1",
+    "sequelize": "^6.34.0"
   }
 }
