--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,10 +23,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "helmet": "^7.1.0",
     "jest": "^29.7.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.3",
     "nodemon": "^3.0.1",
-    "sequelize": "^6.34.0"
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.34.0",
+    "sqlite3": "^5.1.6"
   }
 }
