--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "passport-local": "^1.0.0",
     "sequelize": "^6.34.0",
     "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
